--- a/playground/IPython.display.markdown.ipynb
+++ b/playground/IPython.display.markdown.ipynb
@@ -13,18 +13,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {
     "id": "BPeWqz0ZB_vH"
    },
    "outputs": [],
    "source": [
-    "from IPython.display import display, Markdown, Latex"
+    "from IPython.display import display, Markdown, Latex, HTML"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
@@ -57,7 +57,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_6421/265042420.py:1: FutureWarning: In future versions `DataFrame.to_latex` is expected to utilise the base implementation of `Styler.to_latex` for formatting and rendering. The arguments signature may therefore change. It is recommended instead to use `DataFrame.style.to_latex` which also contains additional functionality.\n",
+      "/tmp/ipykernel_104488/265042420.py:1: FutureWarning: In future versions `DataFrame.to_latex` is expected to utilise the base implementation of `Styler.to_latex` for formatting and rendering. The arguments signature may therefore change. It is recommended instead to use `DataFrame.style.to_latex` which also contains additional functionality.\n",
       "  display(Latex(df.to_latex(index=True)))\n"
      ]
     },
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
@@ -183,18 +183,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {
     "id": "yBOTzL-gEgD5"
    },
    "outputs": [],
    "source": [
-    "df_styled = df.style.set_caption('Test table rendered in markdown')"
+    "df_styled = df.style.set_caption('Test table rendered in LaTeX')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {
     "tags": []
    },
@@ -203,7 +203,7 @@
      "data": {
       "text/latex": [
        "\\begin{table}\n",
-       "\\caption{Test table rendered in markdown}\n",
+       "\\caption{Test table rendered in LaTeX}\n",
        "\\begin{tabular}{lrr}\n",
        " & A & B \\\\\n",
        "a & 1 & 1 \\\\\n",
@@ -225,6 +225,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'|    |   A |   B |\\n|:---|----:|----:|\\n| a  |   1 |   1 |\\n| b  |   2 |   2 |\\n| c  |   3 |   3 |'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#display(Markdown(df_styled))\n",
+    "df.to_markdown(index=True)\n",
+    "#display(HTML(df_styled.to_html()))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "_2CMWexxb_6I"
@@ -240,23 +262,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "InhLK335cf0r"
-   },
-   "source": [
-    "|    |   A |   B |\n",
-    "|:---|----:|----:|\n",
-    "| a  |   1 |   1 |\n",
-    "| a  |   2 |   2 |\n",
-    "| b  |   3 |   3 |\n",
-    "\n",
-    "[Table caption]"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {
     "tags": []
    },
@@ -288,15 +295,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "tags": []
-   },
+   "execution_count": 30,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "|    |   A |   B |                   |:---|----:|----:|                   | a  |   1 |   1 |                   | a  |   2 |   2 |                   | b  |   3 |   3 |"
+       "|    |   A |   B |\n",
+       "|:---|----:|----:|\n",
+       "| a  |   1 |   1 |\n",
+       "| b  |   2 |   2 |\n",
+       "| c  |   3 |   3 |"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -307,11 +316,11 @@
     }
    ],
    "source": [
-    "display(Markdown(\"|    |   A |   B | \\\n",
-    "                  |:---|----:|----:| \\\n",
-    "                  | a  |   1 |   1 | \\\n",
-    "                  | a  |   2 |   2 | \\\n",
-    "                  | b  |   3 |   3 |\"))"
+    "display(Markdown('|    |   A |   B |\\n' \\\n",
+    "                 '|:---|----:|----:|\\n' \\\n",
+    "                 '| a  |   1 |   1 |\\n' \\\n",
+    "                 '| b  |   2 |   2 |\\n' \\\n",
+    "                 '| c  |   3 |   3 |'))"
    ]
   },
   {
@@ -328,6 +337,105 @@
     "|        2|env  |rdata_all_env_AHP_edible_Cities_2022-03-18_09-53.csv  |environmental sub-criteria |\n",
     "|        3|soc  |rdata_all_soc_AHP_edible_Cities_2022-03-18_09-53.csv  |social sub-criteria        |\n",
     "|        4|eco  |rdata_all_eco_AHP_edible_Cities_2022-03-18_09-53.csv  |economic sub-criteria      |"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Table: Test table rendered in Markdown\n",
+      "\n",
+      "|    |   A |   B |\n",
+      "|:---|----:|----:|\n",
+      "| a  |   1 |   1 |\n",
+      "| b  |   2 |   2 |\n",
+      "| c  |   3 |   3 |\n"
+     ]
+    }
+   ],
+   "source": [
+    "str_table_caption = 'Test table rendered in Markdown'\n",
+    "str_table_content = df.to_markdown(index=True)\n",
+    "\n",
+    "str_table_complete = 'Table: ' + str_table_caption + '\\n\\n' + str_table_content\n",
+    "\n",
+    "print(str_table_complete)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "Table: Test table rendered in Markdown\n",
+       "\n",
+       "|    |   A |   B |\n",
+       "|:---|----:|----:|\n",
+       "| a  |   1 |   1 |\n",
+       "| b  |   2 |   2 |\n",
+       "| c  |   3 |   3 |"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(Markdown(str_table_complete))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to render dataframes to markdown table with caption\n",
+    "def func_render_dataframe2Markdown(df, str_caption):\n",
+    "    str_table_complete = 'Table: ' + str_caption + '\\n\\n' \\\n",
+    "                         + df.to_markdown(index=True)\n",
+    "    display(Markdown(str_table_complete))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "Table: Test table rendered in Markdown\n",
+       "\n",
+       "|    |   A |   B |\n",
+       "|:---|----:|----:|\n",
+       "| a  |   1 |   1 |\n",
+       "| b  |   2 |   2 |\n",
+       "| c  |   3 |   3 |"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "str_table_caption = 'Test table rendered in Markdown'\n",
+    "\n",
+    "func_render_dataframe2Markdown(df, str_table_caption)"
    ]
   },
   {
@@ -376,9 +484,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.9.13"
   },
   "latex_metadata": {
+   "CC_logo": "../images/CC_BY-SA_40.png",
    "affiliation": "Test and Certification Body for Electrical Engineering at BG ETEM",
    "author": "Dipl.-Ing. Bj\\\"orn Kasper",
    "bib": "../literature/notebook.bib",
