--- a/Step-by-step_intro_to_ML_with_SVC_and_Iris.ipynb
+++ b/Step-by-step_intro_to_ML_with_SVC_and_Iris.ipynb
@@ -258,7 +258,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "a03b6abf-ab54-4518-822f-099a9653a7b0",
    "metadata": {
@@ -283,7 +282,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "ad1c0b91-b676-4313-95d7-1ba21549e22f",
    "metadata": {
@@ -311,7 +309,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "da6eb1e8-a563-4ae7-afb9-3dba843d87af",
    "metadata": {},
@@ -334,7 +331,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "6391bb5b-11fe-45bc-bb66-79b5f0674033",
    "metadata": {},
@@ -484,7 +480,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "5afbfd84",
    "metadata": {},
@@ -497,7 +492,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "6aeb57ac",
    "metadata": {},
@@ -514,7 +508,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "3b5601c0-a2f3-4592-b278-a53d5d503a46",
    "metadata": {},
@@ -529,7 +522,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "4c195049",
    "metadata": {},
@@ -544,7 +536,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "00458f90",
    "metadata": {},
@@ -577,7 +568,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "b698f890-8319-4d1a-81a2-6fca5690dd56",
    "metadata": {},
@@ -594,7 +584,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "703ec890-0379-42a2-b6d3-7cf736308f75",
    "metadata": {},
@@ -609,7 +598,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "db9dc8f8-b5ae-4a0f-b35c-60fee400ee0b",
    "metadata": {},
@@ -7118,6 +7106,14 @@
     "\n",
     "Dresden, 11.11.2022"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "013b1bab-cde0-4ac1-a744-a158a078c0ac",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -7140,7 +7136,7 @@
    "formats": "ipynb,md"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -7154,7 +7150,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10 (default, Nov 14 2022, 12:59:47) \n[GCC 9.4.0]"
+   "version": "3.11.0"
   },
   "latex_metadata": {
    "CC_logo": "images/CC_BY-SA_40.png",
